tests/c_headers/net_if.h


struct net_if_router {
	sys_snode_t node;
	struct net_addr address;
	struct net_if *iface;
	uint32_t life_start;
	uint16_t lifetime;
	uint8_t is_used : 1;
	uint8_t is_default : 1;
	uint8_t is_infinite : 1;
	uint8_t _unused : 5;
};
enum net_if_flag {
	NET_IF_UP,
	NET_IF_POINTOPOINT,
	NET_IF_PROMISC,
	NET_IF_NO_AUTO_START,
	NET_IF_SUSPENDED,
	NET_IF_FORWARD_MULTICASTS,
	NET_IF_IPV4,
	NET_IF_IPV6,
	NET_IF_NUM_FLAGS
};
struct net_if_config {
	struct net_if_ip ip;
#if defined(CONFIG_NET_DHCPV4) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_dhcpv4 dhcpv4;
#endif 
#if defined(CONFIG_NET_IPV4_AUTO) && defined(CONFIG_NET_NATIVE_IPV4)
	struct net_if_ipv4_autoconf ipv4auto;
#endif 
#if defined(CONFIG_NET_L2_VIRTUAL)
	sys_slist_t virtual_interfaces;
#endif 
};
struct net_if_dev {
	const struct device *dev;
	const struct net_l2 * const l2;
	void *l2_data;
	struct net_linkaddr link_addr;
#if defined(CONFIG_NET_OFFLOAD)
	struct net_offload *offload;
#endif 
	uint16_t mtu;
#if defined(CONFIG_NET_SOCKETS_OFFLOAD)
	bool offloaded;
#endif 
};
struct net_if {
	struct net_if_dev *if_dev;
#if defined(CONFIG_NET_STATISTICS_PER_INTERFACE)
	struct net_stats stats;
#endif 
	struct net_if_config config;
#if defined(CONFIG_NET_POWER_MANAGEMENT)
	int tx_pending;
#endif
};
struct net_if_router *net_if_ipv4_router_lookup(struct net_if *iface,
						struct in_addr *addr);
struct net_if_router *net_if_ipv4_router_find_default(struct net_if *iface,
						      struct in_addr *addr);
struct net_if_router *net_if_ipv4_router_add(struct net_if *iface,
					     struct in_addr *addr,
					     bool is_default,
					     uint16_t router_lifetime);
bool net_if_ipv4_router_rm(struct net_if_router *router);
bool net_if_ipv4_addr_mask_cmp(struct net_if *iface,
			       const struct in_addr *addr);
bool net_if_ipv4_is_addr_bcast(struct net_if *iface,
			       const struct in_addr *addr);
struct net_if *net_if_ipv4_select_src_iface(const struct in_addr *dst);
static inline struct net_if *net_if_ipv4_select_src_iface(
	const struct in_addr *dst)
{
	ARG_UNUSED(dst);
	return NULL;
}
const struct in_addr *net_if_ipv4_select_src_addr(struct net_if *iface,
						  const struct in_addr *dst);
static inline const struct in_addr *net_if_ipv4_select_src_addr(
	struct net_if *iface, const struct in_addr *dst)
{
	ARG_UNUSED(iface);
	ARG_UNUSED(dst);
	return NULL;
}
struct in_addr *net_if_ipv4_get_ll(struct net_if *iface,
				   enum net_addr_state addr_state);
struct in_addr *net_if_ipv4_get_global_addr(struct net_if *iface,
					    enum net_addr_state addr_state);
void net_if_ipv4_set_netmask(struct net_if *iface,
			     const struct in_addr *netmask);
__syscall bool net_if_ipv4_set_netmask_by_index(int index,
						const struct in_addr *netmask);
void net_if_ipv4_set_gw(struct net_if *iface, const struct in_addr *gw);
__syscall bool net_if_ipv4_set_gw_by_index(int index, const struct in_addr *gw);
struct net_if *net_if_select_src_iface(const struct sockaddr *dst);
typedef void (*net_if_link_callback_t)(struct net_if *iface,
				       struct net_linkaddr *dst,
				       int status);
struct net_if_link_cb {
	sys_snode_t node;
	net_if_link_callback_t cb;
};
void net_if_register_link_cb(struct net_if_link_cb *link,
			     net_if_link_callback_t cb);
void net_if_unregister_link_cb(struct net_if_link_cb *link);
void net_if_call_link_cb(struct net_if *iface, struct net_linkaddr *lladdr,
			 int status);
bool net_if_need_calc_rx_checksum(struct net_if *iface);
bool net_if_need_calc_tx_checksum(struct net_if *iface);
__syscall struct net_if *net_if_get_by_index(int index);
int net_if_get_by_iface(struct net_if *iface);
typedef void (*net_if_cb_t)(struct net_if *iface, void *user_data);
void net_if_foreach(net_if_cb_t cb, void *user_data);
int net_if_up(struct net_if *iface);
static inline bool net_if_is_up(struct net_if *iface)
{
	NET_ASSERT(iface);
	return net_if_flag_is_set(iface, NET_IF_UP);
}
int net_if_down(struct net_if *iface);
typedef void (*net_if_timestamp_callback_t)(struct net_pkt *pkt);
struct net_if_timestamp_cb {
	sys_snode_t node;
	struct net_pkt *pkt;
	struct net_if *iface;
	net_if_timestamp_callback_t cb;
};
void net_if_register_timestamp_cb(struct net_if_timestamp_cb *handle,
				  struct net_pkt *pkt,
				  struct net_if *iface,
				  net_if_timestamp_callback_t cb);
void net_if_unregister_timestamp_cb(struct net_if_timestamp_cb *handle);
void net_if_call_timestamp_cb(struct net_pkt *pkt);
void net_if_add_tx_timestamp(struct net_pkt *pkt);