src/zephyr_c/net/znet_if.nim


proc net_if_ipv4_router_lookup*(iface: ptr net_if; caddr: ptr InAddr): ptr net_if_router {.
    importc: "net_if_ipv4_router_lookup", header: hdr.}


## *
##  @brief Find default router for this IPv4 address.
##
##  @param iface Network interface. This can be NULL in which case we
##  go through all the network interfaces to find a suitable router.
##  @param addr IPv4 address
##
##  @return Pointer to router information, NULL if cannot be found
##

proc net_if_ipv4_router_find_default*(iface: ptr net_if; caddr: ptr InAddr): ptr net_if_router {.
    importc: "net_if_ipv4_router_find_default", header: hdr.}


## *
##  @brief Add IPv4 router to the system.
##
##  @param iface Network interface
##  @param addr IPv4 address
##  @param is_default Is this router the default one
##  @param router_lifetime Lifetime of the router
##
##  @return Pointer to router information, NULL if could not be added
##

proc net_if_ipv4_router_add*(iface: ptr net_if; caddr: ptr InAddr; is_default: bool;
                            router_lifetime: uint16): ptr net_if_router {.
    importc: "net_if_ipv4_router_add", header: hdr.}


## *
##  @brief Remove IPv4 router from the system.
##
##  @param router Router information.
##
##  @return True if successfully removed, false otherwise
##

proc net_if_ipv4_router_rm*(router: ptr net_if_router): bool {.
    importc: "net_if_ipv4_router_rm", header: hdr.}


## *
##  @brief Check if the given IPv4 address belongs to local subnet.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr IPv4 address
##
##  @return True if address is part of local subnet, false otherwise.
##

proc net_if_ipv4_addr_mask_cmp*(iface: ptr net_if; caddr: ptr InAddr): bool {.
    importc: "net_if_ipv4_addr_mask_cmp", header: hdr.}


## *
##  @brief Check if the given IPv4 address is a broadcast address.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr IPv4 address, this should be in network byte order
##
##  @return True if address is a broadcast address, false otherwise.
##

proc net_if_ipv4_is_addr_bcast*(iface: ptr net_if; caddr: ptr InAddr): bool {.
    importc: "net_if_ipv4_is_addr_bcast", header: hdr.}


## *
##  @brief Get a network interface that should be used when sending
##  IPv4 network data to destination.
##
##  @param dst IPv4 destination address
##
##  @return Pointer to network interface to use, NULL if no suitable interface
##  could be found.
##

proc net_if_ipv4_select_src_iface*(dst: ptr InAddr): ptr net_if {.
      importc: "net_if_ipv4_select_src_iface", header: hdr.}



## *
##  @brief Get a IPv4 source address that should be used when sending
##  network data to destination.
##
##  @param iface Interface to use when sending the packet.
##  If the interface is not known, then NULL can be given.
##  @param dst IPv4 destination address
##
##  @return Pointer to IPv4 address to use, NULL if no IPv4 address
##  could be found.
##

proc net_if_ipv4_select_src_addr*(iface: ptr net_if; dst: ptr InAddr): ptr InAddr {.
      importc: "net_if_ipv4_select_src_addr", header: hdr.}



## *
##  @brief Get a IPv4 link local address in a given state.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr_state IPv4 address state (preferred, tentative, deprecated)
##
##  @return Pointer to link local IPv4 address, NULL if no proper IPv4 address
##  could be found.
##

proc net_if_ipv4_get_ll*(iface: ptr net_if; addr_state: net_addr_state): ptr InAddr {.
    importc: "net_if_ipv4_get_ll", header: hdr.}


## *
##  @brief Get a IPv4 global address in a given state.
##
##  @param iface Interface to use. Must be a valid pointer to an interface.
##  @param addr_state IPv4 address state (preferred, tentative, deprecated)
##
##  @return Pointer to link local IPv4 address, NULL if no proper IPv4 address
##  could be found.
##

proc net_if_ipv4_get_global_addr*(iface: ptr net_if; addr_state: net_addr_state): ptr InAddr {.
    importc: "net_if_ipv4_get_global_addr", header: hdr.}


## *
##  @brief Set IPv4 netmask for an interface.
##
##  @param iface Interface to use.
##  @param netmask IPv4 netmask
##

proc net_if_ipv4_set_netmask*(iface: ptr net_if; netmask: ptr InAddr) {.
    importc: "net_if_ipv4_set_netmask", header: hdr.}


## *
##  @brief Set IPv4 netmask for an interface index.
##
##  @param index Network interface index
##  @param netmask IPv4 netmask
##
##  @return True if netmask was added, false otherwise.
##

proc net_if_ipv4_set_netmask_by_index*(index: cint; netmask: ptr InAddr): bool {.
    syscall, importc: "net_if_ipv4_set_netmask_by_index", header: hdr.}


## *
##  @brief Set IPv4 gateway for an interface.
##
##  @param iface Interface to use.
##  @param gw IPv4 address of an gateway
##

proc net_if_ipv4_set_gw*(iface: ptr net_if; gw: ptr InAddr) {.
    importc: "net_if_ipv4_set_gw", header: hdr.}


## *
##  @brief Set IPv4 gateway for an interface index.
##
##  @param index Network interface index
##  @param gw IPv4 address of an gateway
##
##  @return True if gateway was added, false otherwise.
##

proc net_if_ipv4_set_gw_by_index*(index: cint; gw: ptr InAddr): bool {.syscall,
    importc: "net_if_ipv4_set_gw_by_index", header: hdr.}


## *
##  @brief Get a network interface that should be used when sending
##  IPv6 or IPv4 network data to destination.
##
##  @param dst IPv6 or IPv4 destination address
##
##  @return Pointer to network interface to use. Note that the function
##  will return the default network interface if the best network interface
##  is not found.
##

proc net_if_select_src_iface*(dst: ptr SockAddr): ptr net_if {.
    importc: "net_if_select_src_iface", header: hdr.}




## *
##  @brief Register a link callback.
##
##  @param link Caller specified handler for the callback.
##  @param cb Callback to register.
##

proc net_if_register_link_cb*(link: ptr net_if_link_cb; cb: net_if_link_callback_t) {.
    importc: "net_if_register_link_cb", header: hdr.}


## *
##  @brief Unregister a link callback.
##
##  @param link Caller specified handler for the callback.
##

proc net_if_unregister_link_cb*(link: ptr net_if_link_cb) {.
    importc: "net_if_unregister_link_cb", header: hdr.}


## *
##  @brief Call a link callback function.
##
##  @param iface Network interface.
##  @param lladdr Destination link layer address
##  @param status 0 is ok, < 0 error
##

proc net_if_call_link_cb*(iface: ptr net_if; lladdr: ptr net_linkaddr; status: cint) {.
    importc: "net_if_call_link_cb", header: hdr.}


## *
##  @brief Check if received network packet checksum calculation can be avoided
##  or not. For example many ethernet devices support network packet offloading
##  in which case the IP stack does not need to calculate the checksum.
##
##  @param iface Network interface
##
##  @return True if checksum needs to be calculated, false otherwise.
##

proc net_if_need_calc_rx_checksum*(iface: ptr net_if): bool {.
    importc: "net_if_need_calc_rx_checksum", header: hdr.}


## *
##  @brief Check if network packet checksum calculation can be avoided or not
##  when sending the packet. For example many ethernet devices support network
##  packet offloading in which case the IP stack does not need to calculate the
##  checksum.
##
##  @param iface Network interface
##
##  @return True if checksum needs to be calculated, false otherwise.
##

proc net_if_need_calc_tx_checksum*(iface: ptr net_if): bool {.
    importc: "net_if_need_calc_tx_checksum", header: hdr.}


## *
##  @brief Get interface according to index
##
##  @details This is a syscall only to provide access to the object for purposes
##           of assigning permissions.
##
##  @param index Interface index
##
##  @return Pointer to interface or NULL if not found.
##

proc net_if_get_by_index*(index: cint): ptr net_if {.syscall,
    importc: "net_if_get_by_index", header: hdr.}


## *
##  @brief Get interface index according to pointer
##
##  @param iface Pointer to network interface
##
##  @return Interface index
##

proc net_if_get_by_iface*(iface: ptr net_if): cint {.importc: "net_if_get_by_iface",
    header: hdr.}


## *
##  @typedef net_if_cb_t
##  @brief Callback used while iterating over network interfaces
##
##  @param iface Pointer to current network interface
##  @param user_data A valid pointer to user data or NULL
##

type
  net_if_cb_t* = proc (iface: ptr net_if; user_data: pointer)



## *
##  @brief Go through all the network interfaces and call callback
##  for each interface.
##
##  @param cb User-supplied callback function to call
##  @param user_data User specified data
##

proc net_if_foreach*(cb: net_if_cb_t; user_data: pointer) {.
    importc: "net_if_foreach", header: hdr.}


## *
##  @brief Bring interface up
##
##  @param iface Pointer to network interface
##
##  @return 0 on success
##

proc net_if_up*(iface: ptr net_if): cint {.importc: "net_if_up", header: hdr.}


## *
##  @brief Check if interface is up.
##
##  @param iface Pointer to network interface
##
##  @return True if interface is up, False if it is down.
##

proc net_if_is_up*(iface: ptr net_if): bool {.importc: "$1", header: hdr.}



## *
##  @brief Bring interface down
##
##  @param iface Pointer to network interface
##
##  @return 0 on success
##

proc net_if_down*(iface: ptr net_if): cint {.importc: "net_if_down", header: hdr.}

when CONFIG_NET_PKT_TIMESTAMP and CONFIG_NET_NATIVE:
  ## *
  ##  @typedef net_if_timestamp_callback_t
  ##  @brief Define callback that is called after a network packet
  ##         has been timestamped.
  ##  @param "struct net_pkt *pkt" A pointer on a struct net_pkt which has
  ##         been timestamped after being sent.
  ##
  type
    net_if_timestamp_callback_t* = proc (pkt: ptr net_pkt)
  
  ##  @brief Timestamp callback handler struct.
  ##
  ##  Stores the timestamp callback information. Caller must make sure that
  ##  the variable pointed by this is valid during the lifetime of
  ##  registration. Typically this means that the variable cannot be
  ##  allocated from stack.
  ##
  type
    net_if_timestamp_cb* {.importc: "net_if_timestamp_cb", header: hdr, bycopy.} = object
      node* {.importc: "node".}: sys_snode_t ## * Node information for the slist.
      pkt* {.importc: "pkt".}: ptr net_pkt ## * Packet for which the callback is needed. A NULL value means all packets.
      iface* {.importc: "iface".}: ptr net_if ## * Net interface for which the callback is needed.  A NULL value means all interfaces.
      cb* {.importc: "cb".}: net_if_timestamp_callback_t ## * Timestamp callback

  

  ##  @brief Register a timestamp callback.
  ##
  ##  @param handle Caller specified handler for the callback.
  ##  @param pkt Net packet for which the callback is registered. NULL for all
  ##  	      packets.
  ##  @param iface Net interface for which the callback is. NULL for all
  ## 		interfaces.
  ##  @param cb Callback to register.
  ##
  proc net_if_register_timestamp_cb*(handle: ptr net_if_timestamp_cb;
                                    pkt: ptr net_pkt; iface: ptr net_if;
                                    cb: net_if_timestamp_callback_t) {.
      importc: "net_if_register_timestamp_cb", header: hdr.}
  

  ##  @brief Unregister a timestamp callback.
  ##
  ##  @param handle Caller specified handler for the callback.
  ##
  proc net_if_unregister_timestamp_cb*(handle: ptr net_if_timestamp_cb) {.
      importc: "net_if_unregister_timestamp_cb", header: hdr.}
  

  ##  @brief Call a timestamp callback function.
  ##
  ##  @param pkt Network buffer.
  ##
  proc net_if_call_timestamp_cb*(pkt: ptr net_pkt) {.
      importc: "net_if_call_timestamp_cb", header: hdr.}
  ##
  ##  @brief Add timestamped TX buffer to be handled
  ##
  ##  @param pkt Timestamped buffer
  ##
  proc net_if_add_tx_timestamp*(pkt: ptr net_pkt) {.
      importc: "net_if_add_tx_timestamp", header: hdr.}

